--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "babel-register": "^6.9.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
+    "dotenv": "^2.0.0",
     "expect": "^1.20.1",
+    "http-server": "^0.9.0",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-promise": "^0.5.3",
