--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "expect": "^1.20.1",
+    "firebase": "^3.6.4",
     "http-server": "^0.9.0",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
@@ -40,6 +41,8 @@
   "devDependencies": {
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-stage-0": "^6.5.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
     "react-transform-hmr": "^1.0.4"
   }
 }
